Getting started with Auth controller Added FA specific config options

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,3 +42,13 @@ play.i18n.langs = [ "en" ]
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+
+# Flickr Assistant
+alerf.fa.app_key = ""
+alerf.fa.app_secret =  ""
+alerf.flickr.rest.url = "https://api.flickr.com/services/rest"
+alerf.flickr.oauth.request_token = "https://www.flickr.com/services/oauth/request_token"
+alerf.flickr.oauth.access_token = "https://www.flickr.com/services/oauth/access_token"
+alerf.flickr.oauth.authorize = "https://www.flickr.com/services/oauth/authorize"
+
