--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "less": "^2.5.3",
     "grunt-bower-task": "~0.4",
     "grunt-contrib-handlebars": "~0.11",
-    "grunt-contrib-watch": "~0.6"
+    "grunt-contrib-watch": "~0.6",
+    "grunt-contrib-less": "~1.1"
   },
   "private": true
 }
