Phantom added to dependencies Seed of cassandra integration Updated logic around loading favourites Started working on dashboard as entity concept

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,3 +52,8 @@ alerf.flickr.oauth.request_token = "https://www.flickr.com/services/oauth/reques
 alerf.flickr.oauth.access_token = "https://www.flickr.com/services/oauth/access_token"
 alerf.flickr.oauth.authorize = "https://www.flickr.com/services/oauth/authorize"
 
+alerf.fa.cassandra.host = ""
+alerf.fa.cassandra.port = ""
+alerf.fa.cassandra.keyspace = ""
+alerf.fa.cassandra.user = ""
+alerf.fa.cassandra.pass = ""
