--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flickr-assistant",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "Gruntfile.js",
   "scripts": {
@@ -9,15 +9,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "bower": "^1.7.1",
-    "grunt": "^0.4.5",
-    "grunt-cli": "~0.1",
-    "handlebars": "^4.0.5",
-    "less": "^2.5.3",
+    "bower": "~1.7",
+    "grunt": "~1.0",
+    "grunt-cli": "~1.2",
+    "handlebars": "~4.0",
+    "less": "~2.7",
     "grunt-bower-task": "~0.4",
-    "grunt-contrib-handlebars": "~0.11",
-    "grunt-contrib-watch": "~0.6",
-    "grunt-contrib-less": "~1.1"
+    "grunt-contrib-handlebars": "~1.0",
+    "grunt-contrib-watch": "~1.0",
+    "grunt-contrib-less": "~1.4"
   },
   "private": true
 }
