--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,8 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+play.crypto.secret = "PDU?tAnfk?aZ?iwrNwnxIlR6CTf:G3gf:90Latabg@5241AB`R5W:1uDFN];Ik@m"
+play.crypto.secret = ${?FA_CRYPTO_SECRET}
 
 # The application languages
 # ~~~~~
@@ -46,14 +47,20 @@ play.i18n.langs = [ "en" ]
 
 # Flickr Assistant
 alerf.fa.app_key = ""
-alerf.fa.app_secret =  ""
+alerf.fa.app_key = ${?FA_APP_KEY}
+alerf.fa.app_secret = ""
+alerf.fa.app_secret = ${?FA_APP_SECRET}
 alerf.flickr.rest.url = "https://api.flickr.com/services/rest"
 alerf.flickr.oauth.request_token = "https://www.flickr.com/services/oauth/request_token"
 alerf.flickr.oauth.access_token = "https://www.flickr.com/services/oauth/access_token"
 alerf.flickr.oauth.authorize = "https://www.flickr.com/services/oauth/authorize"
 
-alerf.fa.cassandra.host = ""
-alerf.fa.cassandra.port = ""
-alerf.fa.cassandra.keyspace = ""
-alerf.fa.cassandra.user = ""
+#fadb
+alerf.fa.cassandra.host = "172.17.0.2"
+alerf.fa.cassandra.host = ${?FA_DB_HOST}
+alerf.fa.cassandra.port = 9042
+alerf.fa.cassandra.user = "cassandra"
+alerf.fa.cassandra.user = ${?FA_DB_USER}
 alerf.fa.cassandra.pass = ""
+alerf.fa.cassandra.pass = ${?FA_DB_PASSWORD}
+alerf.fa.cassandra.keyspace = "flickrassistant"
