--- a/ops/cassandra/Dockerfile
+++ b/ops/cassandra/Dockerfile
@@ -1,2 +1,3 @@
-FROM cassandra:3.9
+FROM cassandra:3.11
 ENV CASSANDRA_CLUSTER_NAME=FlickrAssistant
+RUN sed -i 's/^authenticator.\+$/authenticator: PasswordAuthenticator/g' /etc/cassandra/cassandra.yaml
